# echovec

./: .benchmark  .gitignore  CMakeLists.txt  Makefile
bench/: bench_dot.cpp  bench_search_flat.cpp
include/vecstore/flat/: search.h
include/vecstore/vecmath/: dot.h  normalize.h
src/flat/: search.cpp
src/vecmath/: dot_dispatch.cpp  dot_scalar.cpp  dot_x86_avx2.cpp  dot_x86_avx2_baseline.cpp  dot_x86_avx2_unrolled.cpp  normalize.cpp
tests/: bench_normalize.cpp  test_dot.cpp  test_helper.h  test_search_flat.cpp
